# NYCU_AAS_6G_O-RAN_PLAN

./: 0001-Patch-for-NYCU_AAS_6G_O-RAN_PLAN.patch  CMakeLists.txt  README.md  db_fetch_json.py  json_xlsx.py  mac.c  pdcp.c  rlc.c
